Fix in ultra wide screen layout bug

--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,7 @@ a {
 
 .container {
   min-height: 600px;
+  max-width: 120vh;
 }
 
 .profile {
